update : deny_tag, configuration collect